@@ -25,7 +25,7 @@ dependencies {
 
 // See https://github.com/JetBrains/gradle-intellij-plugin/
 intellij {
-    version '2020.3.2'
+    version '2021.3'
     plugins = ['com.intellij.java']
 }
 patchPluginXml {
@@ -35,4 +35,7 @@ patchPluginXml {
 }
 test {
     useJUnitPlatform()
+}
+runIde {
+    jvmArgs '--add-exports', 'java.base/jdk.internal.vm=ALL-UNNAMED'
 }
